- Fixed missing color in sidebar on IE - Fixed input type number check in new bid on IE

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -5,7 +5,7 @@ aside {
     min-width: 300px;
     height: 100%;
     display: inline-block;
-    background-color: var(--ivory);
+    background-color: #1D2731;
     color: white;
 }
 
